# dynamixel_motor

./: .gitignore  README.md  b9se5k30wa5_spe.yaml  output.txt  settings.yaml  typescript_0329
scripts/: changemode.py  (+13 more)
src/bilateral_test/: CMakeLists.txt  package.xml
src/bilateral_test/config/: csv_params.yaml  params_1d.yaml  params_2d.yaml  params_force_control.yaml
src/bilateral_test/launch/: bilateral_2d.launch  bilateral_control_2d_launcher.launch  bilateral_control_4d_launcher.launch  mag_tension_converter.launch  position_follow_1d.launch  position_follow_2d.launch
src/bilateral_test/src/: bilateral_2d_force_node copy.cpp  bilateral_2d_force_node.cpp  bilateral_2d_force_node_0709.cpp  bilateral_2d_force_node_0712_dist.cpp  bilateral_2d_node.cpp  bilateral_4d_force_node copy.cpp  bilateral_4d_force_node.cpp  bilateral_4d_force_node_0701_max.cpp  bilateral_4d_force_node_0702_margin_plus_reactive.cpp  bilateral_4d_force_node_0702_relative.cpp  bilateral_4d_force_node_plusmargin.cpp  bilateral_4d_force_node_startoffset.cpp  bilateral_4d_force_node_state.cpp  force_control_node.cpp  mag_tension_converter.cpp  position_follow_1d_node.cpp  position_follow_2d_node.cpp
src/calibration/: CMakeLists.txt  package.xml
src/calibration/config/: mag_calibration.yaml  zero_point_calibration.yaml
src/calibration/csv/: 0_stepangle_vs_springdist_20250708_111726.csv  1_merged_mean_mag2.csv  1_merged_mean_mag2_monotonic_fit.csv  1_stepangle_vs_springdist_20250601_002155.csv  2_merged_mean_mag2.csv  2_merged_mean_mag2_monotonic_fit.csv  2_stepangle_vs_springdist_20250601_134556.csv  2_stepangle_vs_springdist_20250601_134900.csv  3_merged_mean_mag2.csv  3_merged_mean_mag2_monotonic_fit.csv  3_stepangle_vs_springdist_20250601_002336.csv  4_merged_mean_mag2.csv  4_merged_mean_mag2_monotonic_fit.csv  4_stepangle_vs_springdist_20250601_145644.csv  4_stepangle_vs_springdist_20250601_145703.csv  5_merged_mean_mag2.csv  5_merged_mean_mag2_monotonic_fit.csv  5_stepangle_vs_springdist_20250614_145058.csv  5_stepangle_vs_springdist_20250614_145542.csv  6_merged_mean_mag2.csv  6_merged_mean_mag2_monotonic_fit.csv  6_stepangle_vs_springdist_20250614_192332.csv  6_stepangle_vs_springdist_20250614_192346.csv  6_stepangle_vs_springdist_20250708_104511.csv  7_merged_mean_mag2.csv  7_merged_mean_mag2_monotonic_fit.csv  7_stepangle_vs_springdist_20250614_183513.csv  7_stepangle_vs_springdist_20250614_183521.csv  8_merged_mean_mag2.csv  8_merged_mean_mag2_monotonic_fit.csv  8_stepangle_vs_springdist_20250614_173736.csv  8_stepangle_vs_springdist_20250614_173748.csv  normalized_data.csv  spring_vs_mag_20250530_121011.csv  spring_vs_mag_20250530_124506.csv  spring_vs_mag_20250530_124537.csv  spring_vs_mag_20250530_124924.csv  spring_vs_mag_20250530_125850.csv  spring_vs_mag_20250530_131221.csv  spring_vs_mag_20250530_131728.csv  (+3 more)
src/calibration/csv/motor_0708/: spring_vs_mag_20250708_112312.csv  spring_vs_mag_20250708_112612.csv  spring_vs_mag_20250708_113913.csv  spring_vs_mag_20250708_114156.csv
src/calibration/csv/motor_1/: 1_spring_vs_mag_20250531_193849.csv  1_spring_vs_mag_20250531_194210.csv  1_spring_vs_mag_20250531_194650.csv  1_spring_vs_mag_20250531_194936.csv  1_spring_vs_mag_20250531_200103.csv  1_spring_vs_mag_20250531_200339.csv  1_spring_vs_mag_20250531_200646.csv  spring_vs_mag_20250531_200927.csv  spring_vs_mag_20250531_201159.csv  spring_vs_mag_20250531_202614.csv  spring_vs_mag_20250531_202902.csv  spring_vs_mag_20250531_203124.csv  spring_vs_mag_20250531_203402.csv  spring_vs_mag_20250531_210447.csv  spring_vs_mag_20250531_210933.csv  spring_vs_mag_20250531_211203.csv  spring_vs_mag_20250531_211440.csv
src/calibration/csv/motor_2/: spring_vs_mag_20250601_135030.csv  spring_vs_mag_20250601_135233.csv  spring_vs_mag_20250601_135524.csv  spring_vs_mag_20250601_135721.csv  spring_vs_mag_20250601_135954.csv  spring_vs_mag_20250601_140300.csv  spring_vs_mag_20250601_140529.csv  spring_vs_mag_20250601_140742.csv  spring_vs_mag_20250601_141011.csv  spring_vs_mag_20250601_141211.csv  spring_vs_mag_20250601_141453.csv  spring_vs_mag_20250601_141725.csv  spring_vs_mag_20250601_141921.csv  spring_vs_mag_20250601_142142.csv  spring_vs_mag_20250601_142549.csv  spring_vs_mag_20250601_142857.csv  spring_vs_mag_20250601_143129.csv  spring_vs_mag_20250601_143633.csv
src/calibration/csv/motor_3/: spring_vs_mag_20250531_224958.csv  spring_vs_mag_20250531_225314.csv  spring_vs_mag_20250531_225530.csv  spring_vs_mag_20250531_225810.csv  spring_vs_mag_20250531_230047.csv  spring_vs_mag_20250531_230308.csv  spring_vs_mag_20250531_230527.csv  spring_vs_mag_20250531_230810.csv  spring_vs_mag_20250531_231335.csv  spring_vs_mag_20250531_231617.csv  spring_vs_mag_20250531_231925.csv  spring_vs_mag_20250531_232236.csv  spring_vs_mag_20250531_232510.csv  spring_vs_mag_20250531_232833.csv  spring_vs_mag_20250531_233136.csv  spring_vs_mag_20250531_233348.csv  spring_vs_mag_20250531_233606.csv
src/calibration/launch/: mag_calibration.launch  zero_point_calibration.launch
src/calibration/scripts/: calc_plate_spring.py  calc_springconstant.py  data_20250528_205340.csv  data_20250528_205423.csv  fit_plot.py  plot_csv.py  plot_double.py  plot_magdata.py  plot_tension-mag.py  step-angle2spring-dist.py  tension_calc.py
src/calibration/src/: mag_calibration_node.cpp  zero_point_calibration_node.cpp
src/dynamixel_control/: CMakeLists.txt  package.xml
src/dynamixel_control/launch/: multi_pos_ctrl.launch  multi_pos_only_ctrl.launch
src/dynamixel_control/src/: multi_pos_ctrl.cpp  multi_pos_only_ctrl.cpp
src/feedback_control/: CMakeLists.txt  package.xml
src/feedback_control/launch/: feedback_control_node.launch  pd_control_node.launch
src/feedback_control/src/: tension_feedback_control.cpp
src/joy_to_dynamixel/: CMakeLists.txt  package.xml
src/joy_to_dynamixel/config/: params.yaml
src/joy_to_dynamixel/launch/: joy_control.launch  joy_position_control.launch  joy_to_extended_position.launch
src/joy_to_dynamixel/src/: joy_position_control.cpp  joy_tension_control.cpp  joy_to_extended_position.cpp
(+78 files in other folders)
