<?xml version="1.0"?>
<package format="2">
  <name>bilateral_test</name>
  <version>0.0.1</version>
  <description>Simple bilateral control node</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export></export>
</package>
