<?xml version="1.0"?>
<package format="2">
  <name>calibration</name>
  <version>0.0.0</version>
  <description>The calibration package</description>
  <maintainer email="sskr3@todo.todo">sskr3</maintainer>
  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
