<?xml version="1.0"?>
<package format="2">
  <name>joy_to_dynamixel</name>
  <version>0.1.0</version>
  <description>Joystick-based control for Dynamixel motors (Extended Position Mode)</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>joy</exec_depend>  <!-- ジョイスティック入力用 -->

  <export>
  </export>
</package>
